<resources>
    <string name="app_name">门禁系统</string>
    <string name="splash_text">I am splash!</string>
    <string name="tab_home">首页</string>
    <string name="tab_video">视频</string>
    <string name="tab_micro">微头条</string>
    <string name="tab_me">我的</string>
    <string name="search_you_want_to_search">搜你想搜的</string>
    <string name="tab_infor">消息</string>
    <string name="loading">正在加载中...</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_complete">没有更多数据了</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_no_network_1">网络连接异常</string>
    <string name="load_no_network_2">请检查网络后重试</string>
    <string name="load_error">加载出错了，请点击重试!</string>
    <string name="network_all_closed">当前无可用网络</string>
    <string name="network_timeout">网络连接超时，请检查网络</string>
    <string name="network_not_found">服务器异常，请稍后再试</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_negative">取消</string>
    <string name="realm_insert_fail">数据插入失败</string>
    <string name="permission_str">所需权限被禁止，软件功能可能存在异常</string>
    <string name="login_expired_tip">登陆凭证已过期，请重新登陆</string>
    <string name="dialog_title_delete">删除确认</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="next_step">下一步</string>
    <string name="submit">提交</string>
    <string name="title_fragment_me">我的</string>
    <string name="title_activity_personal_info">个人信息</string>
    <string name="title_activity_info_modify">个人信息修改</string>
    <string name="title_activity_notification_setting">新消息通知设置</string>
    <string name="title_activity_photo_picker">图片选择</string>
    <string name="title_activity_image_preview">图片预览</string>
    <string name="title_activity_pwd_modify">修改密码</string>
    <string name="title_activity_language">语言选择</string>
    <string name="title_activity_about_us">关于我们</string>
    <string name="title_activity_update_desc">更新说明</string>
    <string name="title_activity_update_content">更新内容</string>
    <string name="title_activity_qr_card">我的二维码</string>
    <string name="title_activity_qr_scan">扫一扫</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_ip_setting">IP设置</string>
    <string name="title_activity_forget_pwd">忘记密码</string>
    <string name="title_activity_register">注册用户</string>
    <string name="title_activity_men_manage">人员管理</string>
    <string name="title_activity_module">所有功能</string>
    <string name="title_activity_search_record">搜索</string>
    <string name="title_activity_entrance_data">门禁资料</string>
    <string name="title_activity_entrance_event">门禁事件</string>
    <string name="title_activity_entrance_control">门禁控制</string>
    <string name="title_activity_zone_detail">区域资料</string>
    <string name="title_activity_device_data">设备资料</string>
    <string name="title_activity_add_new_device">新增设备</string>
    <string name="title_activity_register_record">申请记录</string>
    <string name="title_activity_register_data">申请资料</string>
    <string name="title_activity_register_progress">申请进度</string>
    <string name="title_activity_register_basic_data">基本资料</string>
    <string name="title_activity_register_qualification">资质信息</string>
    <string name="title_activity_register_view">注册审核</string>
    <string name="title_activity_register_comment">审核</string>
    <string name="title_activity_order_repair">维修单据</string>
    <string name="title_activity_order_reply">单据回复</string>
    <string name="pwd_input_filter">1234567890abcdefghijklmnopqrstuvwxyz·~!@#$%^*()_+=-\|'";:/?>.,</string>
    <string name="me_str_1">新消息通知设置</string>
    <string name="me_str_2">修改密码</string>
    <string name="me_str_3">语言选择</string>
    <string name="me_str_4">关于我们</string>
    <string name="me_str_5">退出登陆</string>
    <string name="me_str_6">确定退出当前账号吗？</string>
    <string name="personal_info_str_1">头像</string>
    <string name="personal_info_str_2">账号</string>
    <string name="personal_info_str_3">昵称</string>
    <string name="personal_info_str_4">姓名</string>
    <string name="personal_info_str_5">二维码名片</string>
    <string name="personal_info_str_6">性别</string>
    <string name="personal_info_str_7">电话</string>
    <string name="personal_info_str_8">手机</string>
    <string name="personal_info_str_9">邮箱</string>
    <string name="personal_info_str_10">人员编号</string>
    <string name="personal_info_str_11">所属机构</string>
    <string name="personal_info_str_12">人员类型</string>
    <string name="personal_info_str_13">修改昵称</string>
    <string name="personal_info_str_14">请输入昵称</string>
    <string name="personal_info_str_15">修改姓名</string>
    <string name="personal_info_str_16">请输入姓名</string>
    <string name="personal_info_str_17">修改电话号码</string>
    <string name="personal_info_str_18">请输入电话号码</string>
    <string name="personal_info_str_19">修改手机号码</string>
    <string name="personal_info_str_20">请输入手机号码</string>
    <string name="personal_info_str_21">修改邮箱</string>
    <string name="personal_info_str_22">请输入邮箱</string>
    <string name="photo_picker_activity_str_1">图片选择</string>
    <string name="photo_picker_activity_str_2">完成</string>
    <string name="photo_picker_activity_str_3">所有图片</string>
    <string name="photo_picker_activity_str_4">%1$d张</string>
    <string name="photo_picker_activity_str_5">您最多只能选择%1$d张照片</string>
    <string name="photo_picker_activity_str_6">(%1$d/%2$d)完成</string>
    <string name="photo_picker_activity_str_7">预览</string>
    <string name="photo_picker_activity_str_8">预览(%1$d)</string>
    <string name="hello_blank_fragment">消息界面</string>
    <string name="access_info">门禁资料</string>
    <string name="notification_setting_str_1">声音</string>
    <string name="notification_setting_str_2">震动</string>
    <string name="pwd_modify_str_1">原&#8194;密&#8194;码</string>
    <string name="pwd_modify_str_2">请输入原密码</string>
    <string name="pwd_modify_str_3">新&#8194;密&#8194;码</string>
    <string name="pwd_modify_str_4">请输入新密码</string>
    <string name="pwd_modify_str_5">确认密码</string>
    <string name="pwd_modify_str_6">请再次输入新密码</string>
    <string name="pwd_modify_str_7">下一步</string>
    <string name="pwd_modify_str_8">提交</string>
    <string name="language_str_1">默认</string>
    <string name="language_str_2">中文(简体)</string>
    <string name="language_str_3">中文(繁體)</string>
    <string name="language_str_4">English(United States)</string>
    <string name="about_us_str_1">更新说明</string>
    <string name="about_us_str_2">检查版本</string>
    <string name="about_us_str_3">深圳市纽贝尔电子有限公司 版权所有</string>
    <string name="about_us_str_4">Copyright © Newabel</string>
    <string name="about_us_str_5">All Rights Reserved</string>
    <string name="about_us_str_6">可升级至版本%1$s</string>
    <string name="about_us_str_7">发现新版本%1$s</string>
    <string name="about_us_str_8">立即升级</string>
    <string name="personal_info_modify_str_1">提交</string>
    <string name="personal_info_modify_str_2">获取验证码</string>
    <string name="personal_info_modify_str_3">请输入验证码</string>
    <string name="personal_info_modify_str_4">您输入的电话号码不合法</string>
    <string name="personal_info_modify_str_5">您输入的手机号码不合法</string>
    <string name="personal_info_modify_str_6">您输入的邮箱地址不合法</string>
    <string name="personal_info_modify_str_7">您输入验证码不正确</string>
    <string name="verify_code_str_1">%1$d秒后重发</string>
    <string name="verify_code_str_2">点击重发</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="qr_card_str_1">我的二维码</string>
    <string name="qr_card_str_2">分享二维码</string>
    <string name="qr_card_str_3">保存二维码</string>
    <string name="qr_card_str_4">扫一扫</string>
    <string name="qr_card_str_5">二维码已保存至相册</string>
    <string name="qr_scan_str_1">将二维码/条码放入框内，即可自动扫描</string>
    <string name="login_str_1">登陆</string>
    <string name="login_str_2">请输入账号或者手机号</string>
    <string name="login_str_3">密码</string>
    <string name="login_str_4">请输入密码</string>
    <string name="login_str_5">登陆</string>
    <string name="login_str_6">忘记密码？</string>
    <string name="login_str_7">注册用户</string>
    <string name="login_str_8">账号或者密码错误</string>
    <string name="login_str_9">登陆失败</string>
    <string name="login_str_10">登陆成功</string>
    <string name="login_str_11">登陆用户不存在</string>
    <string name="login_str_12">登陆用户已停用</string>
    <string name="login_str_13">登陆用户已过期</string>
    <string name="login_str_14">登陆用户已被锁定</string>
    <string name="login_str_15">用户无权限</string>
    <string name="ip_setting_str_1">IP地址</string>
    <string name="ip_setting_str_2">192.168.0.123</string>
    <string name="ip_setting_str_3">端口号</string>
    <string name="ip_setting_str_4">23</string>
    <string name="ip_setting_str_5">保存</string>
    <string name="ip_setting_str_6">请输入IP地址</string>
    <string name="ip_setting_str_7">请输入端口号</string>
    <string name="ip_setting_str_8">请输入合法的IP地址</string>
    <string name="ip_setting_str_9">设置已保存</string>
    <string name="forget_pwd_str_1">手机号</string>
    <string name="forget_pwd_str_2">请输入手机号</string>
    <string name="forget_pwd_str_3">验证码</string>
    <string name="forget_pwd_str_4">请输入手机验证码</string>
    <string name="forget_pwd_str_5">获取验证码</string>
    <string name="forget_pwd_str_6">新&#8194;密&#8194;码</string>
    <string name="forget_pwd_str_7">请输入新密码</string>
    <string name="forget_pwd_str_8">确认密码</string>
    <string name="forget_pwd_str_9">请再次输入新密码</string>
    <string name="forget_pwd_str_10">下一步</string>
    <string name="forget_pwd_str_11">提交</string>
    <string name="forget_pwd_str_12">新密码设置成功</string>
    <string name="forget_pwd_str_13">新密码设置失败</string>
    <string name="register_str_1">手机号</string>
    <string name="register_str_2">请输入手机号</string>
    <string name="register_str_3">验证码</string>
    <string name="register_str_4">请输入手机验证码</string>
    <string name="register_str_5">获取验证码</string>
    <string name="register_str_6">账&#12288;&#12288;号</string>
    <string name="register_str_7">请输入账号</string>
    <string name="register_str_8">密&#12288;&#12288;码</string>
    <string name="register_str_9">请输入6-20位密码</string>
    <string name="register_str_10">确认密码</string>
    <string name="register_str_11">请再次输入密码</string>
    <string name="register_str_12">下一步</string>
    <string name="register_str_13">提交</string>
    <string name="register_str_14">用户注册成功</string>
    <string name="register_str_15">用户注册失败</string>
    <string name="register_str_16">输入的手机号码不合法</string>
    <string name="register_str_17">两次输入的密码不一致</string>
    <string name="register_str_18">注册用户已存在</string>
    <string name="search_record_str_1">请输入关键词</string>
    <string name="search_record_str_2">确定</string>
    <string name="search_record_str_3">取消</string>
    <string name="module_title_entrance_data">门禁资料</string>
    <string name="module_title_entrance_event">门禁事件</string>
    <string name="module_title_entrance_control">门禁控制</string>
    <string name="module_title_zone_manage">区域管理</string>
    <string name="module_title_device_data">设备资料</string>
    <string name="module_title_department_manage">机构管理</string>
    <string name="module_title_employee_manage">人员管理</string>
    <string name="module_hint_entrance_data">请输入区域、门名称</string>
    <string name="module_hint_entrance_event">请输入区域、门名称</string>
    <string name="module_hint_entrance_control">请输入区域、门名称</string>
    <string name="module_hint_zone_manage">请输入区域名称</string>
    <string name="module_hint_device_data">请输入区域、设备名称</string>
    <string name="module_hint_department_manage">请输入机构名称</string>
    <string name="module_hint_employee_manage">请输入机构、人员名称</string>
    <string name="module_str_1">获取数据失败</string>
    <string name="module_str_2">区域不存在</string>
    <string name="module_str_3">门禁</string>
    <string name="module_str_4">区域</string>
    <string name="module_str_5">查看区域</string>
    <string name="module_str_6">删除区域</string>
    <string name="module_str_7">根节点</string>
    <string name="module_str_8">确认删除%1$s吗？</string>
</resources>