<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.newabel.entrancesys.ui.activity.ForgetPwdActivity">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/ll_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/divider_top_height"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_page_left"
            android:paddingRight="@dimen/margin_page_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pwd_str_1"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_14" />


            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@color/white"
                android:digits="1234567890"
                android:gravity="left|center_vertical"
                android:hint="@string/forget_pwd_str_2"
                android:lines="1"
                android:maxLength="11" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_verify_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingLeft="@dimen/margin_page_left"
            android:paddingRight="@dimen/margin_page_right"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forget_pwd_str_3"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_toLeftOf="@+id/btn_verify_code"
                android:layout_toRightOf="@+id/tv_verify_code"
                android:background="@color/white"
                android:gravity="left|center_vertical"
                android:hint="@string/forget_pwd_str_4"
                android:lines="1"
                android:maxLength="20" />

            <com.newabel.entrancesys.ui.widget.VerifyCodeButton
                android:id="@+id/btn_verify_code"
                android:layout_width="@dimen/dp_110"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forget_pwd_str_5"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="@color/white"
            android:paddingLeft="@dimen/margin_page_left"
            android:paddingRight="@dimen/margin_page_right">

            <TextView
                android:id="@+id/tv_new_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forget_pwd_str_6"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/tv_new_pwd"
                android:background="@color/white"
                android:digits="@string/pwd_input_filter"
                android:hint="@string/forget_pwd_str_7"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_1"
            android:background="@color/white"
            android:paddingLeft="@dimen/margin_page_left"
            android:paddingRight="@dimen/margin_page_right">

            <TextView
                android:id="@+id/tv_confirm_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forget_pwd_str_8"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/et_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_toRightOf="@+id/tv_confirm_pwd"
                android:background="@color/white"
                android:digits="@string/pwd_input_filter"
                android:hint="@string/forget_pwd_str_9"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="20"
                android:textColor="@color/text_tittle"
                android:textSize="@dimen/sp_14" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/margin_page_left"
        android:layout_marginRight="@dimen/margin_page_right"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/forget_pwd_str_10"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />
</LinearLayout>
