<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_app_bg"
    android:orientation="vertical"
    tools:context="com.newabel.entrancesys.ui.activity.PersonalInfoModifyActivity">

    <include layout="@layout/title_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_page_left"
        android:paddingRight="@dimen/margin_page_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_setting_str_1"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/transparent"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:hint="@string/ip_setting_str_2"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/text_tittle"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/margin_page_left"
        android:paddingRight="@dimen/margin_page_right">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_setting_str_3"
            android:textSize="@dimen/sp_14" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="@color/transparent"
            android:digits="0123456789"
            android:ellipsize="end"
            android:gravity="center_vertical|left"
            android:hint="@string/ip_setting_str_4"
            android:inputType="number"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/text_tittle"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/margin_page_left"
        android:layout_marginRight="@dimen/margin_page_right"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/ip_setting_str_5"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>
